--- a/src/css/button.css
+++ b/src/css/button.css
@@ -1,16 +1,15 @@
 button {
+    margin-left: 10px;
+    margin-right: 10px;
     transition: all 20ms ease-in-out;
     outline: none;
     border: none;
     border-radius: 5px;
     padding: 5px;
+    min-width: 60px;
 }
 
 button.primary {
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    padding: 5px;
     background-color: royalblue;
     color: white;
     box-shadow: 0px 4px 0px blue;
@@ -18,5 +17,16 @@ button.primary {
 
 button.primary:active {
     box-shadow: 0px 0px 0px blue;
+    translate: 0px 4px;
+}
+
+button.default {
+    background-color: grey;
+    color: white;
+    box-shadow: 0px 4px 0px darkslategrey;
+}
+
+button.default:active {
+    box-shadow: 0px 0px 0px darkslategrey;
     translate: 0px 4px;
 }
