Changed bootstrap cards to custom

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -148,6 +148,7 @@ a.primary.grey:active {
 }
 
 .quiz-card {
+    cursor: pointer;
     padding: 10px;
     border: medium none;
     box-shadow: rgb(34, 34, 34) 0px 0px 6px;
