--- a/src/css/App.css
+++ b/src/css/App.css
@@ -75,6 +75,10 @@ a.primary.grey:active {
     cursor: pointer;
 }
 
+.main-container {
+    margin: 50px;
+}
+
 .profile-stats {
     position: absolute;
     right: 10px;
@@ -155,4 +159,8 @@ a.primary.grey:active {
     width: auto;
     margin: 20px;
     border-radius: 5px;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
